--- a/css/main.css
+++ b/css/main.css
@@ -2213,6 +2213,8 @@ header .logo a {
 
 .popup-modal .description-box {
 	padding: 1.8rem 3.6rem 3rem;
+	max-height: 250px;
+	overflow: auto;
 }
 
 .popup-modal .description-box h4 {
@@ -2257,7 +2259,7 @@ header .logo a {
 	display: block;
 	text-align: center;
 	float: left;
-	width: 50%;
+	width: 100%;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
